--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,6 +1,9 @@
 # Settings to manage and configure a Firebase App Hosting backend.
 # https://firebase.google.com/docs/app-hosting/configure
 
+# Specifies the service account to run the backend.
+serviceAccount: gws-groups-reader@actions-plus-64181820-69508.iam.gserviceaccount.com
+
 runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
