--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GSUITE_ADMIN_EMAIL=svc-gcds@costaisa.com
-GEMINI_API_KEY=AIzaSyAgkPLSN2Ar5Xo4VeSLF_12XB_Us2SvAWc
-GOOGLE_APPLICATION_CREDENTIALS=gws-groups-reader-service-account.json
+GSUITE_ADMIN_EMAIL=
+GEMINI_API_KEY=
+GOOGLE_APPLICATION_CREDENTIALS=
